# rohrpost

./: .flake8  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  check_version.sh  mypy.ini  pylama.ini  pylava.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  tests.yml
doc/: Makefile  conf.py  index.rst
requirements/: dev.txt
rohrpost/: __init__.py  handlers.py  main.py  message.py  mixins.py  registry.py  sync_consumer.py  tests.py
src/rohrpost/: __init__.py  main.py  message.py  mixins.py  registry.py  sync_consumer.py  tests.py
tests/: conftest.py  test_main.py  test_message.py  test_mixins.py  test_ping.py  test_registry.py
