[build-system]
requires = ["setuptools >= 54.1.1", "wheel >= 0.36.2"]
build-backend = "setuptools.build_meta"

[tool.check-manifest]
ignore = [
    ".flake8",
    "CHANGELOG.rst",
    "check_version.sh",
    "mypy.ini",
    "doc/*",
    "requirements/*",
    "tests/*",
]

[tool.isort]
balanced_wrapping = true
profile = "black"


[tool.pylint."messages control"]
disable = [
    "missing-docstring",
]
