[build-system]
requires = ["setuptools >= 80.9.0", "wheel >= 0.45.1"]
build-backend = "setuptools.build_meta"


[project]
name = "rohrpost"
version = "4.1.0"
authors = [
    {name = "Tobias Kunze", email = "tobias.kunze@ax-semantics.com"},
]
description = "rohrpost WebSocket protocol for ASGI"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "channels >= 4.0",
]
dynamic = ["readme"]

[project.urls]
Documentation = "https://rohrpost.readthedocs.io/en/stable/"
Changelog = "https://github.com/axsemantics/rohrpost/blob/main/CHANGELOG.rst"
Source = "https://github.com/axsemantics/rohrpost"
Tracker = "https://github.com/axsemantics/rohrpost/issues"

[dependency-groups]
cicd = [
    "uv>=0.8.13",
]
dev = [
    "black>=25.1.0",
    "channels>=4.3.1",
    "check-manifest>=0.50",
    "flake8>=7.3.0",
    "flake8-annotations-complexity>=0.1.0",
    "flake8-builtins>=3.0.0",
    "flake8-comprehensions>=3.16.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "Pygments>=2.19.2",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "types-setuptools>=80.9.0.20250822",
]
doc = [
    "sphinx>=8.1.3",
    "sphinx_rtd_theme>=3.0.2",
]
publish = [
    "twine>=6.1.0",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.rst"], content-type = "text/x-rst"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true


[tool.check-manifest]
ignore = [
    ".flake8",
    "CHANGELOG.rst",
    "mypy.ini",
    "doc/*",
    "requirements/*",
    "tests/*",
    "uv.lock",
]


[tool.isort]
balanced_wrapping = true
profile = "black"


[tool.pylint.main]
ignore = [
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "dist",
]

[tool.pylint."messages control"]
disable = [
    "duplicate-code",
    "missing-docstring",
]


[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.uv]
environments = [
    "platform_machine == 'x86_64' and sys_platform == 'linux'",
]

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple"
default = true
