[metadata]
name = rohrpost
version = 3.0.0
description = rohrpost WebSocket protocol for ASGI
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/axsemantics/rohrpost
author = Tobias Kunze
author_email = tobias.kunze@ax-semantics.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
project_urls =
    Documentation = https://rohrpost.readthedocs.io/en/stable/
    Changelog = https://github.com/axsemantics/rohrpost/blob/main/CHANGELOG.rst
    Source = https://github.com/axsemantics/rohrpost
    Tracker = https://github.com/axsemantics/rohrpost/issues

[options]
packages = find_namespace:
install_requires =
    channels >= 3.0
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    rohrpost
    rohrpost.*
